// file: proto/gcommon/v1/config/change_type.proto
// version: 1.0.1
// guid: 0e330584-b155-45f0-8c79-0aa19e9aa30e

edition = "2023";

package common.v1;

import "google/protobuf/go_features.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/common/";

enum TemplateChangeType {
  TEMPLATE_CHANGE_TYPE_UNSPECIFIED = 0;
  TEMPLATE_CHANGE_TYPE_FEATURE = 1;
  TEMPLATE_CHANGE_TYPE_BUGFIX = 2;
  TEMPLATE_CHANGE_TYPE_ENHANCEMENT = 3;
  TEMPLATE_CHANGE_TYPE_DEPRECATED = 4;
  TEMPLATE_CHANGE_TYPE_SECURITY = 5;
  CHANGE_TYPE_BREAKING = 6;
}
